--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,14 @@
-.App {
+.conainer {
+width: 600px;
+display: flex;
+flex-direction: column;
+justify-content: center;
+margin-left: auto;
+margin-right: auto;
+
+}
+
+/* .App {
   text-align: center;
 }
 
@@ -35,4 +45,4 @@
   to {
     transform: rotate(360deg);
   }
-}
+} */
