--- a/src/components/Tasks.module.css
+++ b/src/components/Tasks.module.css
@@ -1,4 +1,5 @@
 .p{
-    color: blue;
-    text-align: center;
+        text-align: center;
+        display: flex;
+        flex-direction:column;
 }
