--- a/src/components/Top.module.css
+++ b/src/components/Top.module.css
@@ -67,6 +67,6 @@ button:active {
     /*box-shadow: 0 5px 10px #eb1595, 0 0 2px 0 #eb1595 inset;*/
 }
 
-.used {
+.current {
     box-shadow: 0 0 40px 40px #852e62 inset, 0 0 0 0 #852e62;
 }
